Fixed the bug inside DNACodon class and transcribe method
The code "List.of()" has an error. To fix that error, I created new array lists for codone table. I added 3 to i in transcribe method because I don't want to check the same alphabet again.